fix(Overlay): unset styles for popover when behind CSS Modules flag

--- a/packages/react/src/Overlay/Overlay.module.css
+++ b/packages/react/src/Overlay/Overlay.module.css
@@ -9,6 +9,7 @@
 }
 
 .Overlay {
+  all: unset;
   position: absolute;
   width: auto;
   min-width: 192px;
